# WatchlineNYC

./: .env.example  .gitignore  CLAUDE.md  Makefile  Makefile.discovery  Makefile.evidentiary  README.md  index.html  pyproject.toml
docker/: load-kgs.sh  setup-kg-containers.sh  test_kg.py
docs/: actor-namespaces.md  inventory.md
docs/decisions/: ADR-000-skeleton.md
documents/: charter.md  design-rationale.md  investigative-intents.md  ontology-conceptual.md  ontology-implementable.md
scripts/: 01_schema.cypher  02_seed_rules.cypher  03_indexes.cypher  04_seed_investigative_intents.cypher  deploy.sh  diagnose.py  test_connections.py  verify_consistency.py  whichfile.py
watchline/discovery/schema/: graph_type.cypher
watchline/evidentiary/schema/: graph_type.cypher
watchline/fw/: connections.py  explorer.py  intent.py  investigator.py  narrator.py  renderer.py  resolver.py  router.py  server.py  state.py
watchline/fw/intents/: __init__.py  base.py  building_due_diligence.py  concealment_detection.py  deterioration.py  enforcement_accountability.py  fine_evasion.py  geographic_concentration.py  mortgage_concealment.py  network_exposure.py  ownership_change.py  ownership_name_discrepancy.py  portfolio_condition.py  portfolio_identification.py  recidivism.py  rent_stabilization.py  stubs.py  vacate_history.py  worst_first.py
watchline/fw/templates/: base.html  logo_b64.txt  watchline.css
watchline/ingest/acris/: config.py  (+1 more)
watchline/shared/: batching.py  bbl.py  buildings.py  connections.py  marshal_evictions.py
watchline/ui/: app.py  sidebar.py
(+75 files in other folders)
